# macros_sql_crud

./: Cargo.toml  README.md
src/: lib.rs
tests/: test.rs  test_print.rs  with_id.rs
